# foray-denoising

./: .gitignore  .gitmodules  CMakeLists.txt  download_sponza.py  readme.md
data/: animatedCamera.gltf
data/gltf/lightandcam/: lightAndCamera.gltf
data/gltf/testboxanimated/: scene.gltf
denoisers/: CMakeLists.txt
src/: CMakeLists.txt  customrtstage.cpp  customrtstage.hpp  denoiserapp.cpp  denoiserapp.hpp  foray_complexrtstage.cpp  foray_complexrtstage.hpp  foray_rtstage.cpp  foray_rtstage.hpp  main.cpp  sponza_sample.cpp  sponza_sample.hpp
src/shaders/: raygen.rgen
src/shaders/default/: anyhit.rahit  closesthit.rchit  miss.rmiss
src/shaders/visibilitytest/: anyhit.rahit
